# conviction-gradient-framework

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  cli.py  env.example  pyproject.toml
api/: main.py
bridges/: backtest_bridge.py  data_bridge.py  maic_bridge.py  portfolio_bridge.py
components/: debate_shift.py  forecast_error.py  fundamental_violation.py  regime_detector.py  risk_regime.py  thesis_shift.py
config/: defaults.py  settings.py
engine/: adaptive.py  gradient.py  loss.py  models.py  stability.py  updater.py
evaluation/: attribution.py  benchmark.py  calibration.py  update_alignment.py
examples/: TEMPLATE.md
examples/configs/: default.yaml  fvs_taxonomy.yaml
governance/: debate.py  policies.py  session.py
sizing/: constraints.py  failure_modes.py  mapper.py
storage/: database.py  schemas.py
tests/: test_adaptive_weights.py  test_bridges.py  test_components.py  test_engine.py  test_evaluation.py  test_governance.py  test_har_vol.py  test_real_data.py  test_regime_detector.py  test_signal_data.py  test_sizing.py  test_storage.py  test_validation.py
validation/: __init__.py  baselines.py  real_data.py  report.py  runner.py  signal_data.py  synthetic_data.py
